correction in spacing

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -645,11 +645,11 @@
 
 
   .foot-panel2 ul a{
-    font-size: 1.1rem;
+    font-size: 0.85rem;
   }
 
   .foot-panel2 ul p{
-    font-size: 1.3rem;
+    font-size: 1rem;
   }
 
 
@@ -662,6 +662,8 @@
 
   
   }
+
+
   
   
 
