--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,7 @@ button:hover {
 ul {
 
   margin-top: 15px;
+  padding: 0;
 
 }
 
